# BOUT-dev

./: CMakeLists.txt
examples/hasegawa-wakatani/: CMakeLists.txt  hw.cxx  mytest.py
examples/hasegawa-wakatani-3d/: CMakeLists.txt  hw.cxx
examples/hasegawa-wakatani-3d/data/: BOUT.inp
examples/hasegawa-wakatani/data/: BOUT.inp
